:bug: Fixed a mobile spacing issue that the last bugfix caused.

--- a/assets/src/sass/components/_topbar.scss
+++ b/assets/src/sass/components/_topbar.scss
@@ -21,10 +21,7 @@
     font-weight: 800;
     text-align: center;
     text-transform: uppercase;
-  }
-
-  a {
-    padding: 10px 15px;
+    padding: 20px 5px;
   }
 }
 
